ver 0.0.3  * More updates to class get/set routines  * Fixed issue with conflicting class templates (moved static class members into their own type)  * Renamed "NativeManaged" allocator to "NoConstructor" (made more sense)  * Various other bugfixes
git-svn-id: https://scrat.svn.sourceforge.net/svnroot/scrat/trunk@2 17df20b9-c460-4d53-a56e-632d1712e828

--- a/docs/History.txt
+++ b/docs/History.txt
@@ -1,8 +1,14 @@
 ﻿Scrat - Squirrel Binding Utility
 (c) 2009 Brandon Jones
-Version 0.0.2 (preview)
+Version 0.0.3 (preview)
 
 === Version History ===
+
+0.0.3 (05/09/2009)
+ * More updates to class get/set routines
+ * Fixed issue with conflicting class templates (moved static class members into their own type)
+ * Renamed "NativeManaged" allocator to "NoConstructor" (made more sense)
+ * Various other bugfixes
 
 0.0.2 (05/06/2009)
  * Increased possible variable count to 9 for all function bindings and calls
