* Added Constants and Enumerations (See "Using Scrat" for details) * Moved all files up one directory, from "<scrat root>/include/scrat" to "<scrat root>/include" * Fixed TypeWrapper issue with Object.Cast
git-svn-id: https://scrat.svn.sourceforge.net/svnroot/scrat/trunk@6 17df20b9-c460-4d53-a56e-632d1712e828

--- a/docs/History.txt
+++ b/docs/History.txt
@@ -1,8 +1,13 @@
 ﻿Scrat - Squirrel Binding Utility
 (c) 2009 Brandon Jones
-Version 0.0.4 (preview)
+Version 0.0.5 (preview)
 
 === Version History ===
+
+0.0.5 (???)
+ * Added Constants and Enumerations (See "Using Scrat" for details)
+ * Moved all files up one directory, from "<scrat root>/include/scrat" to "<scrat root>/include"
+ * Fixed TypeWrapper issue with Object.Cast
 
 0.0.4 (05/12/2009)
  * Corrected issue with some types being statically defined as unicode versions (ie: wstring)
