--- a/docs/History.txt
+++ b/docs/History.txt
@@ -1,16 +1,19 @@
-﻿Scrat - Squirrel Binding Utility
+﻿Sqrat - Squirrel Binding Utility
 (c) 2009 Brandon Jones
-Version 0.0.5 (preview)
+Version 0.5
 
 === Version History ===
 
-0.0.5 (???)
- * Added Constants and Enumerations (See "Using Scrat" for details)
- * Moved all files up one directory, from "<scrat root>/include/scrat" to "<scrat root>/include"
+0.5 (???)
+ * Renamed library to 'Sqrat' (now with 100% more 'sq'!)
+ * Changed revision number scheme. Will now be simply major.minor 
+ * Added Constants and Enumerations (See "Using Sqrat" for details)
+ * Moved all files up one directory, from "<sqrat root>/include/scrat" to "<sqrat root>/include"
  * Fixed TypeWrapper issue with Object.Cast
  * Changed how Functions are retrieved. Now you call Table.GetFunction<returnType>("FunctionName")
  * Updated variable get/set routines. Should be a little more lightweight now and responds correctly to std::string&
  * Added support for default Virtual Machines (cuts down on repetitive code while leaving customization open)
+ * Converted Usage documents to HTML for easier reading
 
 0.0.4 (05/12/2009)
  * Corrected issue with some types being statically defined as unicode versions (ie: wstring)
