* Small bugfix release to get Sqrat compatible with GCC
git-svn-id: https://scrat.svn.sourceforge.net/svnroot/scrat/trunk@10 17df20b9-c460-4d53-a56e-632d1712e828

--- a/docs/History.txt
+++ b/docs/History.txt
@@ -1,10 +1,13 @@
 ﻿Sqrat - Squirrel Binding Utility
 (c) 2009 Brandon Jones
-Version 0.5
+Version 0.6
 
 === Version History ===
 
-0.5 (???)
+0.6 (05/21/2009)
+ * Small bugfix release to get Sqrat compatible with GCC
+
+0.5 (05/18/2009)
  * Renamed library to 'Sqrat' (now with 100% more 'sq'!)
  * Changed revision number scheme. Will now be simply major.minor 
  * Added Constants and Enumerations (See "Using Sqrat" for details)
